--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
     <%= controller_stylesheet_link_tag %>
+    <%= yield :styles %>
     <%= javascript_importmap_tags %>
   </head>
 
