--- a/app/views/leaderboards/index.html.erb
+++ b/app/views/leaderboards/index.html.erb
@@ -1,3 +1,9 @@
+<% content_for :styles do %>
+  <style>
+    body.leaderboards .leaderboards-placeholder { display: block; }
+  </style>
+<% end %>
+
 <h1>Leaderboard</h1>
 
 <table>
