--- a/app/views/metroidmania/index.html.erb
+++ b/app/views/metroidmania/index.html.erb
@@ -1,2 +1,8 @@
+<% content_for :styles do %>
+  <style>
+    body.metroidmania .metroidmania-placeholder { display: block; }
+  </style>
+<% end %>
+
 <h1>Metroidmania#index</h1>
 <p>Find me in app/views/metroidmania/index.html.erb</p>
