--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,4 +1,2 @@
-/* Styles for Home views */
-
-/* Add controller/view-specific rules here. */
-body.home .home-placeholder { display: block; }
+/* Styles moved to: app/views/home/index.html.erb */
+/* This file has been left for reference and can be deleted once you're satisfied the views render correctly. */
