--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -1,4 +1,2 @@
-/* Styles for Users views */
-
-/* Add controller/view-specific rules here. */
-body.users .users-placeholder { display: block; }
+/* Styles moved to: app/views/users/edit.html.erb */
+/* This file has been left for reference and can be deleted once you're satisfied the views render correctly. */
