--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,9 @@
+<% content_for :styles do %>
+  <style>
+    body.users .users-placeholder { display: block; }
+  </style>
+<% end %>
+
 <h2>Edit Profile</h2>
 
 <h3>Nothing is Here</h3>
