--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -5,12 +5,11 @@
 <h1>Projects</h1>
 
 <div id="projects">
-  <% @projects.each do |project| %>
-    <%= render project %>
-    <p>
-      <%= link_to "Show this project", project %>
-    </p>
-  <% end %>
+  <div class="project-grid">
+    <% @projects.each do |project| %>
+      <%= render project %>
+    <% end %>
+  </div>
 </div>
 
-<%= link_to "New project", new_project_path %>
+<%= link_to "New project", new_project_path, style: "margin-top: 20px; display: inline-block;" %>
